--- a/css/index.css
+++ b/css/index.css
@@ -10,16 +10,24 @@ html {
 
 body {
     font-size: 1rem;
+    font-family: 'Lato', sans-serif;
     margin: 0;
     padding: 0;
+    background-image: url("https://images.unsplash.com/photo-1483982258113-b72862e6cff6?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1650&q=80");
+    background-position: center;
+    background-repeat: center;
+    background-attachment: fixed;
 }
 
 h1 {
-    text-align: center
+    text-align: center;
+    color: white;
 }
 
 span {
-    background-color: yellow;
+    background-color: rgba(255, 255, 255, 0.6);
+    padding: 1px 3px 3px 3px;
+    border-radius: 10px;
 }
 
 .hide {
@@ -30,6 +38,12 @@ span {
 .container {
     width: 600px;
     margin: 0 auto;
+    color: white;
+}
+
+.container p {
+    line-height: 1.5;
+    letter-spacing: 1.5px;
 }
 
 /********   Input ********/
@@ -38,6 +52,7 @@ span {
     width: 600px;
     margin: 20px auto;
     text-align: center;
+    color: white;
 }
 
 .form-container form {
@@ -58,6 +73,12 @@ span {
 
 .fields input {
     margin: 5px;
+    background-color: rgba(0, 0, 0, 0.6);
+    color: white;
+}
+
+input:focus {
+    outline: none;
 }
 
 button {
